; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/target/extr_target_core_tpg.c_core_tpg_wait_for_nacl_pr_ref.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/target/extr_target_core_tpg.c_core_tpg_wait_for_nacl_pr_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.se_node_acl = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @core_tpg_wait_for_nacl_pr_ref(%struct.se_node_acl* %0) #0 {
  %2 = alloca %struct.se_node_acl*, align 8
  store %struct.se_node_acl* %0, %struct.se_node_acl** %2, align 8
  br label %3

3:                                                ; preds = %8, %1
  %4 = load %struct.se_node_acl*, %struct.se_node_acl** %2, align 8
  %5 = getelementptr inbounds %struct.se_node_acl, %struct.se_node_acl* %4, i32 0, i32 0
  %6 = call i64 @atomic_read(i32* %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %3
  %9 = call i32 (...) @cpu_relax()
  br label %3

10:                                               ; preds = %3
  ret void
}

declare dso_local i64 @atomic_read(i32*) #1

declare dso_local i32 @cpu_relax(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
